Get tickets from chain to site

--- a/extensions/wallet/popup/index.html
+++ b/extensions/wallet/popup/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/connect.css">
     <link rel="stylesheet" type="text/css" href="css/wallet.css">
     <script type="text/javascript" src="js/lib/ethers.js" defer></script>
-    <script type="text/javascript" src="js/components/connect.js" defer></script>
-    <script type="text/javascript" src="js/components/wallet.js" defer></script>
+    <script type="text/javascript" src="js/components/ConnectView.js" defer></script>
+    <script type="text/javascript" src="js/components/walletView.js" defer></script>
     <script type="text/javascript" src="js/index.js" defer></script>
   </head>
   <body id="body"></body>
