Better wallet interface.

--- a/extensions/wallet/popup/index.html
+++ b/extensions/wallet/popup/index.html
@@ -3,11 +3,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/connect.css">
-    <link rel="stylesheet" type="text/css" href="css/wallet.css">
-    <script type="text/javascript" src="js/lib/ethers.js" defer></script>
-    <script type="text/javascript" src="js/components/ConnectView.js" defer></script>
-    <script type="text/javascript" src="js/components/walletView.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/accounts.css">
+    <link rel="stylesheet" type="text/css" href="css/add_account.css">
+    <script type="text/javascript" src="js/data/storage.js" defer></script>
+    <script type="text/javascript" src="js/data/image.js" defer></script>
+    <script type="text/javascript" src="js/util/navigation.js" defer></script>
+    <script type="text/javascript" src="js/components/AccountsView.js" defer></script>
+    <script type="text/javascript" src="js/components/AddAccountView.js" defer></script>
     <script type="text/javascript" src="js/index.js" defer></script>
   </head>
   <body id="body"></body>
