Integrate with app

--- a/extensions/wallet/popup/index.html
+++ b/extensions/wallet/popup/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/accounts.css">
     <link rel="stylesheet" type="text/css" href="css/add_account.css">
-    <script type="text/javascript" src="js/data/storage.js" defer></script>
+    <script type="text/javascript" src="../lib/storage.js" defer></script>
     <script type="text/javascript" src="js/data/image.js" defer></script>
     <script type="text/javascript" src="js/util/navigation.js" defer></script>
     <script type="text/javascript" src="js/components/AccountsView.js" defer></script>
