Separate out more components.

--- a/extensions/wallet/popup/index.html
+++ b/extensions/wallet/popup/index.html
@@ -4,13 +4,16 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="stylesheet" type="text/css" href="css/accounts.css">
-    <link rel="stylesheet" type="text/css" href="css/add_account.css">
+    <link rel="stylesheet" type="text/css" href="css/AccountView.css">
+    <link rel="stylesheet" type="text/css" href="css/AccountListView.css">
+    <link rel="stylesheet" type="text/css" href="css/AddAccountView.css">
     <script type="text/javascript" src="../lib/storage.js" defer></script>
     <script type="text/javascript" src="../lib/message.js" defer></script>
+    <script type="text/javascript" src="js/data/page.js" defer></script>
     <script type="text/javascript" src="js/data/image.js" defer></script>
     <script type="text/javascript" src="js/util/navigation.js" defer></script>
-    <script type="text/javascript" src="js/components/AccountsView.js" defer></script>
+    <script type="text/javascript" src="js/components/AccountView.js" defer></script>
+    <script type="text/javascript" src="js/components/AccountListView.js" defer></script>
     <script type="text/javascript" src="js/components/AddAccountView.js" defer></script>
     <script type="text/javascript" src="js/index.js" defer></script>
   </head>
