--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,9 @@
 
 <html lang="en">
   <head>
-    <title>Ticket Commander</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ticket Links</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div id="root"></div>
